--- a/templates/base_vendor.html
+++ b/templates/base_vendor.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %} | Ren Commerce {% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous"> 
     <!-- Cropper-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropper/2.3.4/cropper.min.css"/>  
     <link rel="stylesheet" href="{% static 'dist/main.css' %}">
@@ -17,7 +16,7 @@
 
 <body>
     <!-- Header Area Start -->
-    {% include 'partials/navbar.html' %}
+    {% include 'partials/vendor_navbar.html' %}
     <!-- Header Area End -->
 
     <main>
@@ -27,8 +26,12 @@
     <!-- Footer -->
     {% include 'partials/footer.html' %}
     <!-- Footer -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
     <script src="{% static 'src/js/jquery.min.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    {% block extra_js %}
+    {% endblock extra_js %}
+    {% comment %} <script src="{% static 'src/js/bootstrap-input-spinner.js' %}"></script>  {% endcomment %}
     <script src="{% static 'src/scss/vendors/plugin/js/slick.min.js' %}"></script>
     <script src="{% static 'src/scss/vendors/plugin/js/jquery.nice-select.min.js' %}"></script>
     <script src="{% static 'dist/main.js' %}"></script>
@@ -63,4 +66,5 @@
         {% endfor %}
         {% endif %}
     </script>
+
 </body>
