--- a/templates/partials/vendor_navbar.html
+++ b/templates/partials/vendor_navbar.html
@@ -53,7 +53,7 @@
             <div class="d-none d-lg-block">
                 <nav class="menu-area d-flex align-items-center">
                     <div class="logo">
-                        <a href="{% url 'customers:home' %}"><img src="{% static 'dist/images/logo/logo.png' %}" alt="logo" style="max-width:10rem"/></a>
+                        <a href="{% url 'customers:home' %}"><img src="{% static 'dist/images/logo/logo-vendor.png' %}" alt="logo" style="max-width:10rem"/></a>
                     </div>
                     <ul class="main-menu d-flex align-items-center">
                         <li><a class="active" href="{% url 'customers:home' %}">Home</a></li>
@@ -77,7 +77,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <form method='get' action="{% url 'shop:shop_home' %}">
+                    {% comment %} <form method='get' action="{% url 'shop:shop_home' %}">
                         <div class="search-bar">
                             {% if not no_search %}
                                 <input type="text" name='title' id='d_title' placeholder="Search for product...">
@@ -97,10 +97,10 @@
                             
                             {% endif %}
                         </div>
-                    </form>
+                    </form> {% endcomment %}
                     <div class="menu-icon ml-auto">
                         <ul>
-                            <li>
+                            {% comment %} <li>
                                 <a href="{% url 'customers:wishlist' %}">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="22" height="20"
                                         viewBox="0 0 22 20">
@@ -142,7 +142,7 @@
                                     {% endwith %}
                                     
                                 </a>
-                            </li>
+                            </li> {% endcomment %}
                             <li class="mx-3">
                                 <a href="#">{% if request.user %} {{ request.user.full_name }} {% endif %} <svg xmlns="http://www.w3.org/2000/svg" width="18"
                                         height="20" viewBox="0 0 18 20">
